--- a/snap/gui/urban-terror.desktop
+++ b/snap/gui/urban-terror.desktop
@@ -4,7 +4,7 @@ Version=1
 Encoding=UTF-8
 Name=Urban Terror
 Comment=Free multiplayer first person shooter developed by FrozenSand
-Icon=${SNAP}/meta/gui/urban-terror.png
+Icon=${SNAP}/meta/gui/icon.png
 Exec=urban-terror
 Terminal=false
 StartupNotify=false
