--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,11 +1,8 @@
 name: urban-terror
 summary: Free multiplayer first person shooter developed by FrozenSand
-description: |
-  Urban Terror can be described as a Hollywood tactical shooter;
-  somewhat realism based, but the motto is "fun over realism".
-  This results in a very unique, enjoyable and addictive game.
+description: Urban Terror™ can be described as a Hollywood tactical shooter; somewhat realism based, but the motto is "fun over realism". This results in a very unique, enjoyable and addictive game.
 
-version: '4.3.4'
+version: 4.3.4
 base: core18
 grade: stable
 confinement: strict
