--- a/snap/gui/urban-terror.desktop
+++ b/snap/gui/urban-terror.desktop
@@ -6,3 +6,4 @@ Exec=urban-terror
 Icon=${SNAP}/meta/gui/icon.png
 Categories=Game;ActionGame;
 Keywords=urt;ut4;fps;ioquake;q3a;
+StartupWMClass=urbanterror-m9.x86_64
